<resources>
    <string name="app_name">concejales-project</string>
    <string name="Email">Email</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Cedula">Cédula</string>
    <string name="password">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="Direccion">Dirección</string>
    <string name="Edad">Edad</string>
    <string name="password2">Confirme su Contraseña</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="Sign_Up">Registrate</string>
    <string name="new_message">Nuevo Mensaje</string>
    <string name="username">"Usuario "</string>
    <string name="default_notification_channel_id">1</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Denuncia">Denunciar</string>
    <string name="Denuncia2">Escribe tu denuncia aquí</string>
    <string name="Evidencias">Adjunte Evidencias (Opcional)</string>
    <string name="inicia_sesion">Inicia sesión.</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="noticias">NOTICIAS</string>
    <string name="emergencia">EMERGENCIA</string>
    <string name="denuncias">DENUNCIAS</string>
    <string name="salir">SALIR</string>
    <string name="cambia_tu_imagen">Cambia tu imagen</string>
    <string name="biografia">Biografia</string>

</resources>
