<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

        <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_image_new_user"
                android:layout_marginTop="15dp"
                app:civ_border_color="#000"
                app:civ_border_width="1dp"
                android:elevation="10dp"
                android:layout_gravity="center"
                app:civ_shadow_radius="10dp"
                app:civ_shadow_color="#58D3F7"
                android:background="@android:color/transparent"
                android:id="@+id/btn_select_photo"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="clear_text"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="text|textCapSentences"
                    android:id="@+id/Nombre"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Apellido"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="clear_text"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="text|textCapSentences"
                    android:id="@+id/Apellido"
                    app:endIconMode="clear_text"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Cedula"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="clear_text"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="number"
                    android:id="@+id/Cedula"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="clear_text"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="number"
                    android:id="@+id/Phone"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Direccion"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="clear_text"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="text|textCapSentences"
                    android:id="@+id/Direccion"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:id="@+id/Email"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:id="@+id/Password1"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:id="@+id/Password2"
                    />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textSize="16dp"
                android:id="@+id/btn_sign_up"
                android:text="@string/Sign_Up"
                android:textColor="#fff"/>

        <View
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="1dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:gravity="center"
                android:background="@android:color/darker_gray"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:weightSum="1"
                android:gravity="center_horizontal"
                >
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:textSize="16dp"
                    android:background="@null"
                    android:layout_weight="0.54"
                    android:text="¿Ya tienes cuenta? "/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:background="@null"
                    android:textColor="#0B2161"
                    android:layout_weight="0.4"

                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/go_Login"
                    android:text="@string/inicia_sesion"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

