<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/NewToolbarTheme"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:navigationIcon="@drawable/ic_arrow_back"
                android:layout_alignParentTop="true"/>



        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:hint="@string/Denuncia2"
                android:layout_marginTop="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/toolbar"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:inputType="textMultiLine|textCapSentences"
                    android:gravity="start"
                    android:textColor="#000"
                    android:textSize="14dp"
                    android:id="@+id/Denuncia"
                    android:textCursorDrawable="@null"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Evidencias"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/outlinedTextField"
                android:id="@+id/Evidencias"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:id="@+id/add_photos"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/Evidencias"
                android:layout_centerInParent="true">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/image1"
                    android:background="@drawable/background_imageview_complaint"
                    android:padding="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_add_photo_alternate_24px"/>
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="100dp"
                    android:id="@+id/image2"
                    android:padding="20dp"
                    android:background="@drawable/background_imageview_complaint"
                    android:src="@drawable/ic_add_photo_alternate_24px"/>
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/file"
                    android:background="@drawable/background_imageview_complaint"
                    android:layout_marginLeft="10dp"
                    android:padding="30dp"
                    android:src="@drawable/ic_attach_file_24px"/>

        </LinearLayout>






        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:layout_below="@+id/add_photos"
                android:textSize="16dp"
                android:id="@+id/btn_sign_up"
                android:text="@string/Denuncia"
                android:textColor="#fff"/>

    </RelativeLayout>

</ScrollView>

