<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#000"
                android:contentDescription="Logo">

        </ImageView>
    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email_login"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:id="@+id/password_login"
                    />

        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textSize="16dp"
            android:id="@+id/btn_Login"
            android:text="@string/Login"
            android:textColor="#fff"/>

    <View
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="1dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:gravity="center"
            android:background="@android:color/darker_gray"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:weightSum="1"
            android:gravity="center_horizontal"
            >
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:textSize="16dp"
                android:background="@null"
                android:layout_weight="0.57"
                android:text="¿No tienes cuenta? "/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16dp"
                android:background="@null"
                android:textColor="#0B2161"
                android:layout_weight="0.4"

                android:clickable="true"
                android:focusable="true"
                android:id="@+id/go_Register"
                android:text="Regístrate."/>
    </LinearLayout>

</LinearLayout>

